(about/support): fix vertical gap caused by img `height: auto` in Paypal form

--- a/src/vite/src/assets/sass/pages/_about-support.scss
+++ b/src/vite/src/assets/sass/pages/_about-support.scss
@@ -30,6 +30,14 @@
   }
 }
 
+.kk-PaypalForm {
+  // this fixes a vertical gap when paypal's `pixel.gif` is not yet loaded
+  form > img[height="1"] {
+    width: 1px;
+    height: 1px;
+  }
+}
+
 .btn-patreon {
   color: #fff;
   background: #eb491d;
